Added sub descriptions to experiences

--- a/experience.html
+++ b/experience.html
@@ -449,55 +449,80 @@
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> Assistant Course Developer </p>
-			<p id="small-side-text">Open Learning Initiative, Carnegie Mellon University</p>
-			<p id="small-side-text">March 2020 - Present, June 2019 - December 2019</p>
-			<div class="expskills">
-				<p id="rcorners1">Excel</p>
-				<p id="rcorners1">QA</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">Open Learning Initiative, Carnegie Mellon University</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">March 2020 - Present, June 2019 - December 2019</p>
+					<p id="small-sub-text2">Developed and updated engaging course workbooks, and completed QA for online courses</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Excel</p>
+					<p id="rcorners1">QA</p>
+				</div>
 			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text">Student Technician</p>
-			<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
-			<p id="small-side-text">October 2015 - Present</p>
-			<div class="expskills">
-				<p id="rcorners1">Audio Engineering</p>
-				<p id="rcorners1">Rigging</p>
-				<p id="rcorners1">Event Planning</p>
-				<p id="rcorners1">Teamwork</p>
+				<div class="small-subcontent">
+					<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
+					<div id="small-sub-text">
+					<p id="small-sub-text1">October 2015 - Present</p>
+					<p id="small-sub-text2">Collaborated with event organizers to execute events. Primarily ran sound and rigging for events.</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Audio Engineering</p>
+					<p id="rcorners1">Rigging</p>
+					<p id="rcorners1">Event Planning</p>
+					<p id="rcorners1">Teamwork</p>
+				</div>
 			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Orientation 2020 Production Manager </p>
+			<div class="small-subcontent">
 			<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
-			<p id="small-side-text">May 2019 - August 2019</p>
-			<div class="expskills">
-				<p id="rcorners1">Leadership</p>
-				<p id="rcorners1">Project Management</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">May 2019 - August 2019</p>
+					<p id="small-sub-text2" style="padding-right: 4px">Managed logistics, worked with clients, and supervised personnel to provide technical support for events in a 2000-person tent and around campus for CMU’s 2019 Orientation</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Leadership</p>
+					<p id="rcorners1">Project Management</p>
+				</div>
 			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Research Programmer </p>
+			<div class="small-subcontent">
 			<p id="small-side-text">Infant Language and Learning Lab, Carnegie Mellon University</p>
-			<p id="small-side-text">May 2019 - July 2019</p>
-			<div class="expskills">
-				<p id="rcorners1">MATLAB</p>
-				<p id="rcorners1">Data Analysis</p>
-				<p id="rcorners1">Research</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">May 2019 - July 2019</p>
+					<p id="small-sub-text2">Researched brain imaging toolboxes, and analyzed fNIRS data</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">MATLAB</p>
+					<p id="rcorners1">Data Analysis</p>
+					<p id="rcorners1">Research</p>
+				</div>
 			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Research Assistant </p>
-			<p id="small-side-text">Infant Language and Learning Lab, Carnegie Mellon University</p>
-			<p id="small-side-text">May 2017 - September 2018</p>
-			<div class="expskills">
-				<p id="rcorners1">Unity</p>
-				<p id="rcorners1">C#</p>
-				<p id="rcorners1">Python</p>
-				<p id="rcorners1">MATLAB</p>
-				<p id="rcorners1">Research</p>
-				<p id="rcorners1">Game Development</p>
-				<p id="rcorners1">Teamwork</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">Infant Language and Learning Lab, Carnegie Mellon University</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">May 2017 - September 2018</p>
+					<p id="small-sub-text2">Analyzed fNIRS data, developed a video game to help with children's school readiness skills, and adapted an application to assess ADHD</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Unity</p>
+					<p id="rcorners1">C#</p>
+					<p id="rcorners1">Python</p>
+					<p id="rcorners1">MATLAB</p>
+					<p id="rcorners1">Research</p>
+					<p id="rcorners1">Game Development</p>
+					<p id="rcorners1">Teamwork</p>
+				</div>
 			</div>
 		</div>
 
@@ -505,58 +530,95 @@
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> AB Tech </p>
-			<p id="small-side-text">PR/Social Media Chair</p>
-			<p id="small-side-text">May 2020 - Present</p>
-			<div class="expskills">
-				<p id="rcorners1">Social Media</p>
-				<p id="rcorners1">Digital Marketing</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">PR/Social Media Chair</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">May 2020 - Present</p>
+					<p id="small-sub-text2" style="padding-right: 2px">Run social media, lead recruitment campaigns, and improve relations with alumni</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Social Media</p>
+					<p id="rcorners1">Digital Marketing</p>
+				</div>
 			</div>
 			<p></p>
-			<p id="small-side-text">Co-Head of Tech</p>
-			<p id="small-side-text">May 2019 - May 2020</p>
-			<div class="expskills">
-				<p id="rcorners1">Leadership</p>
-				<p id="rcorners1">Management</p>
-				<p id="rcorners1">Mentoring</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">Co-Head of Tech</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">May 2019 - May 2020</p>
+					<p id="small-sub-text2">Directed an organization of 30+ students, implemented organizational changes that improved workflow and transparency, and mentored members</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Leadership</p>
+					<p id="rcorners1">Management</p>
+					<p id="rcorners1">Mentoring</p>
+				</div>
 			</div>
 			<p></p>
-			<p id="small-side-text">Executive Board Member</p>
-			<p id="small-side-text">May 2017 - May 2019</p>
-			<div class="expskills">
-				<p id="rcorners1">Leadership</p>
-				<p id="rcorners1">Management</p>
-				<p id="rcorners1">Mentoring</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">Executive Board Member</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">May 2017 - May 2019</p>
+					<p id="small-sub-text2">Worked professionally with event organizers, led recruitment events, and taught members technical production skills</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Leadership</p>
+					<p id="rcorners1">Management</p>
+					<p id="rcorners1">Recruitment</p>
+					<p id="rcorners1">Mentoring</p>
+				</div>
 			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Awareness of Roots in Chinese Culture (ARCC) </p>
-			<p id="small-side-text">PR Chair</p>
-			<p id="small-side-text">September 2018 - May 2019</p>
-			<div class="expskills">
-				<p id="rcorners1">Social Media</p>
-				<p id="rcorners1">Digital Marketing</p>
-				<p id="rcorners1">Event Planning</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">PR Chair</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">September 2018 - May 2019</p>
+					<p id="small-sub-text2">Promoted events, ran social media, and helped exec board plan events</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Social Media</p>
+					<p id="rcorners1">Digital Marketing</p>
+					<p id="rcorners1">Event Planning</p>
+				</div>
 			</div>
 			<p></p>
-			<p id="small-side-text">Secretary</p>
-			<p id="small-side-text">September 2017 - May 2018</p>
-			<div class="expskills">
-				<p id="rcorners1">Communication</p>
-				<p id="rcorners1">Event Planning</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">Secretary</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">September 2017 - May 2018</p>
+					<p id="small-sub-text2">Wrote weekly meeting minutes, reserved rooms, and helped exec board plan events</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Communication</p>
+					<p id="rcorners1">Event Planning</p>
+				</div>
 			</div>
 			<p></p>
-			<p id="small-side-text">Historian</p>
-			<p id="small-side-text">September 2016 - May 2017</p>
-			<div class="expskills">
-				<p id="rcorners1">Photography</p>
-				<p id="rcorners1">Event Planning</p>
+			<div class="small-subcontent">
+				<p id="small-side-text">Historian</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">September 2016 - May 2017</p>
+					<p id="small-sub-text2">Photographed events, organized club documents and pictures, and helped exec board plan events</p>
+				</div>
+				<div class="expskills">
+					<p id="rcorners1">Photography</p>
+					<p id="rcorners1">Event Planning</p>
+				</div>
 			</div>
 		</div>
     	<div class="list-subcontent">
-			<p id="side-text"> Lion Dance Choreographer </p>
-			<p id="small-side-text">Spring 2017 and 2018</p>
-			<div class="expskills">
-				<p id="rcorners1">Teaching</p>
+			<p id="side-text"> Lion Dance </p>
+    		<div class="small-subcontent">
+				<p id="small-side-text">Choreographer</p>
+				<div id="small-sub-text">
+					<p id="small-sub-text1">Spring 2017 and 2018</p>
+					<p id="small-sub-text2">Choreographed and taught lion dance routines</p>
+				</div>			
+				<div class="expskills">
+					<p id="rcorners1">Teaching</p>
+				</div>
 			</div>
 		</div>
 
