Updated design for skills.html

--- a/skills.html
+++ b/skills.html
@@ -44,7 +44,7 @@
 
 	<div class=content>
 		<h1 class=center>Skills</h1> 
-    	<div class="list-subcontent center margin-top-40">
+    	<div class="list-subcontent center margin-top-75">
     		<p>Digital Signal Processing • Image Processing • Software Engineering • Audio Engineering • Embedded Programming • Maker</p>
 			<p>Below is a list of the programming languages, software, and hardware that I use and their purposes. Other skills that I have are also included.</p>
 			<div class="margin-top-100"></div>
@@ -54,95 +54,95 @@
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> MATLAB </p>
-			<p id="small-side-text">Signal Processing • Image Processing</p>
+			<p id="small-sub-text">Signal Processing • Image Processing</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Python </p>
-			<p id="small-side-text">Computer Vision • NumPy • PyGame</p>
+			<p id="small-sub-text">Computer Vision • NumPy • PyGame</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> C </p>
-			<p id="small-side-text">Embedded Programming • Data Structures</p>
+			<p id="small-sub-text">Embedded Programming • Data Structures</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Latex </p>
-			<p id="small-side-text">Making documents</p>
+			<p id="small-sub-text">Making documents</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> C# </p>
-			<p id="small-side-text">Unity Scripting</p>
+			<p id="small-sub-text">Unity Scripting</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> C++ </p>
-			<p id="small-side-text">Arduino Programming</p>
+			<p id="small-sub-text">Arduino Programming</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> HTML & CSS </p>
-			<p id="small-side-text">Writing Websites</p>
+			<p id="small-sub-text">Writing Websites</p>
 		</div>
 
-    	<h1 class="center margin-top-40 font-lighter">Microcontrollers</h1>
+    	<h1 class="center margin-top-75 font-lighter">Microcontrollers</h1>
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> Arduino </p>
-			<p id="small-side-text">Maker Projects</p>
+			<p id="small-sub-text">Maker Projects</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Raspberry Pi </p>
-			<p id="small-side-text">Robots • Embedded Programming</p>
+			<p id="small-sub-text">Robots • Embedded Programming</p>
 		</div>
 
-    	<h1 class="center margin-top-40 font-lighter">Software</h1>
+    	<h1 class="center margin-top-75 font-lighter">Software</h1>
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> Audacity </p>
-			<p id="small-side-text">Music Editing</p>
+			<p id="small-sub-text">Music Editing</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Unity </p>
-			<p id="small-side-text">Game Development</p>
+			<p id="small-sub-text">Game Development</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> SOLIDWORKS </p>
-			<p id="small-side-text">CAD Modeling</p>
+			<p id="small-sub-text">CAD Modeling</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Pro Tools </p>
-			<p id="small-side-text">Sound Recording, Editing & Mastering</p>
+			<p id="small-sub-text">Sound Recording, Editing & Mastering</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Photoshop </p>
-			<p id="small-side-text">Photo Editing</p>
+			<p id="small-sub-text">Photo Editing</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Procreate </p>
-			<p id="small-side-text">Sketches</p>
+			<p id="small-sub-text">Sketches</p>
 		</div>
     	
-    	<h1 class="center margin-top-40 font-lighter">Fabrication</h1>
+    	<h1 class="center margin-top-75 font-lighter">Fabrication</h1>
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> Laser Cutting </p>
-			<p id="small-side-text">Maker Projects</p>
+			<p id="small-sub-text">Maker Projects</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> 3D Printing </p>
-			<p id="small-side-text">Maker Projects</p>
+			<p id="small-sub-text">Maker Projects</p>
 		</div>
 
-    	<h1 class="center margin-top-40 font-lighter">Spoken Languages</h1>
+    	<h1 class="center margin-top-75 font-lighter">Spoken Languages</h1>
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> English</p>
-			<p id="small-side-text">Native speaker</p>
+			<p id="small-sub-text">Native speaker</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Chinese</p>
-			<p id="small-side-text">Professional working proficiency</p>
+			<p id="small-sub-text">Professional working proficiency</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Spanish</p>
-			<p id="small-side-text">Limited working proficiency</p>
+			<p id="small-sub-text">Limited working proficiency</p>
 		</div>
 	</div>    
 
