--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,9 @@
 	    	<a href="experience.html" class="element underline-ltr"> 
 	    		Experience 
 	    	</a>
+            <a href="interests.html" class="element underline-ltr"> 
+                Interests 
+            </a>
 	    	<div class="element underline-ltr" id="resume"> 
 	    		Resume 
 	    	</div>
