Fixed image file types

--- a/interests.html
+++ b/interests.html
@@ -45,7 +45,7 @@
     </div>
 
     <div style="height: 50px"></div>
-    <div class=parallax-img style='background-image: url(images/sakura.jpg); height: 630px;'></div>
+    <div class=parallax-img style='background-image: url(images/sakura.JPG); height: 630px;'></div>
 
     <div class="content">
         <h1 class=center>Interests</h1> 
@@ -72,7 +72,7 @@
 
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-            <img src="images/tech1.jpg" style="max-height: 500px; max-width: 100%">
+            <img src="images/tech1.JPG" style="max-height: 500px; max-width: 100%">
             <div class="text">Lunar Gala 2019</div>
         </div>
 
@@ -124,30 +124,27 @@
         <div id="line-grey"></div>
         <br>
         <div class="row-img">
-          <div class="column-img">
-            <img src="images/photography/photo1.jpg">
-            <img src="images/photography/photo2.jpg">
-            <img src="images/photography/photo3.jpg">
-          </div>
-          <div class="column-img">
-            <img src="images/photography/photo14.jpg">
-            <img src="images/concert1.jpg">
-            <img src="images/photography/photo9.jpg">
-            <!-- <img src="images/photography/photo4.jpg"> -->
-            <!-- <img src="images/sakura.jpg"> -->
-            <img src="images/butterfly.jpg">
-
-          </div>
-          <div class="column-img">
-            <img src="images/photography/photo10.jpg">
-            <img src="images/photography/photo15.jpg">
-            <!-- <img src="images/photography/photo8.jpg"> -->
-            <img src="images/tech1.jpg">          </div>
-          <div class="column-img">
-            <img src="images/photography/photo11.jpg">
-            <img src="images/photography/photo12.jpg">
-            <img src="images/photography/photo13.jpg">
-          </div>
+            <div class="column-img">
+                <img src="images/photography/photo1.JPG">
+                <img src="images/photography/photo2.jpg">
+                <img src="images/photography/photo3.jpg">
+            </div>
+            <div class="column-img">
+                <img src="images/photography/photo14.jpg">
+                <img src="images/concert1.jpg">
+                <img src="images/photography/photo9.jpg">
+                <img src="images/butterfly.JPG">
+            </div>
+            <div class="column-img">
+                <img src="images/photography/photo10.jpg">
+                <img src="images/photography/photo15.jpg">
+                <img src="images/tech1.jpg">          
+            </div>
+            <div class="column-img">
+                <img src="images/photography/photo11.jpg">
+                <img src="images/photography/photo12.jpg">
+                <img src="images/photography/photo13.jpg">
+            </div>
         </div>
         <br>
         <br>
@@ -163,7 +160,7 @@
         <br>
     </div> 
 
-    <div class=parallax-img style='background-image: url(images/butterfly.jpg); height: 630px;'></div>
+    <div class=parallax-img style='background-image: url(images/butterfly.JPG); height: 630px;'></div>
 
     <div class=content>
         <p class="sub-title center">Environment</p>
