Fixed image file type

--- a/interests.html
+++ b/interests.html
@@ -138,7 +138,7 @@
             <div class="column-img">
                 <img src="images/photography/photo10.jpg">
                 <img src="images/photography/photo15.jpg">
-                <img src="images/tech1.jpg">          
+                <img src="images/tech1.JPG">          
             </div>
             <div class="column-img">
                 <img src="images/photography/photo11.jpg">
